✨ [BE] feat: 게임 종료 로직 구현